Fix to work with EmployeeApi

--- a/Pages/Employees/Delete.cshtml
+++ b/Pages/Employees/Delete.cshtml
@@ -32,7 +32,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Employee.Id" />
-        <a class="btn btn-outline-primary" href="/Admin/Products/index" role="button">Back </a>|
+        <a class="btn btn-primary" href="/Admin/Products/index" role="button">Back </a>|
         <input type="submit" value="Delete" class="btn btn-danger" /> 
       
     </form>
